[gd_scene load_steps=19 format=2]

[ext_resource path="res://Entities/InteractableObjects/lightlycrumpledpapernoiseEmission.tres" type="Texture" id=1]
[ext_resource path="res://ScienceNotes.gd" type="Script" id=2]
[ext_resource path="res://Assets/asset package custom/paintpngs/ScienceNotes2.png" type="Texture" id=3]
[ext_resource path="res://Assets/asset package custom/paintpngs/CellDiagram1.png" type="Texture" id=4]
[ext_resource path="res://Assets/asset package custom/paintpngs/ScienceNotes1.png" type="Texture" id=5]
[ext_resource path="res://Assets/asset package custom/paintpngs/ScienceNotes3grocery.png" type="Texture" id=6]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.35, 0.02, 0.5 )

[sub_resource type="SpatialMaterial" id=2]
albedo_texture = ExtResource( 4 )
emission_enabled = true
emission = Color( 0.607843, 0.592157, 0.592157, 1 )
emission_energy = 0.74
emission_operator = 1
emission_on_uv2 = false
emission_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=3]
material = SubResource( 2 )
size = Vector2( 0.6, 0.9 )

[sub_resource type="SpatialMaterial" id=4]
albedo_texture = ExtResource( 5 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 0.37
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.6, 0.9 )

[sub_resource type="SpatialMaterial" id=6]
albedo_texture = ExtResource( 3 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 0.37
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=7]
material = SubResource( 6 )
size = Vector2( 0.6, 0.9 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 3, 3, 3 )

[sub_resource type="OpenSimplexNoise" id=9]
period = 96.4
persistence = 1.0
lacunarity = 3.78

[sub_resource type="NoiseTexture" id=10]
width = 200
height = 1000
noise = SubResource( 9 )

[sub_resource type="SpatialMaterial" id=11]
albedo_texture = ExtResource( 6 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 0.22
emission_operator = 0
emission_on_uv2 = false
emission_texture = SubResource( 10 )

[sub_resource type="PlaneMesh" id=12]
material = SubResource( 11 )
size = Vector2( 0.6, 0.9 )

[node name="ScienceNotes" type="KinematicBody" groups=["Interactable"]]
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0340012, 0 )
shape = SubResource( 1 )

[node name="Notes1" type="MeshInstance" parent="."]
mesh = SubResource( 3 )

[node name="Notes2" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 5 )

[node name="Notes3" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 7 )

[node name="Area" type="Area" parent="."]
visible = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 8 )

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 0.945553, 0, -0.325469, 0, 1, 0, 0.325469, 0, 0.945553, 0, -0.0191594, 0 )
mesh = SubResource( 12 )
